infra/02.keycloak/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: kc-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: keycloak
    app.kubernetes.io/managed-by: keycloak-operator
  type: ClusterIP
